[project]
name = "nlp-ejercicios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=1.26.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "scipy==1.10.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.18.1",
    "tensorflow-metal>=1.2.0",
]
